[gd_scene load_steps=2 format=3 uid="uid://w0kiwl4ntqb1"]

[ext_resource type="Script" uid="uid://bxy33cfljnd53" path="res://scenes/miscellaneous/gravity_field.gd" id="2_jk4cs"]

[node name="GravityField" type="Area2D"]
collision_layer = 16
script = ExtResource("2_jk4cs")
metadata/_custom_type_script = "uid://bxy33cfljnd53"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="SleepTimer" type="Timer" parent="."]

[node name="LeaveBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeaveBox"]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="SleepTimer" to="." method="_on_sleep_timer_timeout"]
[connection signal="body_exited" from="LeaveBox" to="." method="_on_leave_box_body_exited"]
